@@ -11,12 +11,12 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+
 import uk.gov.companieshouse.api.testdata.exception.DataException;
 import uk.gov.companieshouse.api.testdata.exception.NoDataFoundException;
 import uk.gov.companieshouse.api.testdata.model.entity.AccountPenalties;
@@ -34,6 +34,13 @@ import uk.gov.companieshouse.logging.LoggerFactory;
 @Service
 public class AccountPenaltiesServiceImpl implements AccountPenaltiesService {
 
+    private static List<AccountPenalty> filterByPenaltyRef(String penaltyRef,
+                                                           AccountPenalties accountPenalties) {
+        return accountPenalties.getPenalties().stream()
+                .filter(p -> p.getTransactionReference().equals(penaltyRef))
+                .toList();
+    }
+
     private static final Logger LOG =
             LoggerFactory.getLogger(String.valueOf(AccountPenaltiesServiceImpl.class));
     private static final String EXCEPTION_MSG = "no account penalties";
@@ -44,14 +51,18 @@ public class AccountPenaltiesServiceImpl implements AccountPenaltiesService {
             PenaltiesTransactionSubType.S3);
     private static final List<String> C1_LEDGER_CODES = List.of("E1", "S1", "N1");
 
-
-    @Autowired
-    private AccountPenaltiesRepository repository;
-
     private static final NoDataFoundException PENALTY_NOT_FOUND_EX =
             new NoDataFoundException("penalty not found");
 
     private static final SecureRandom SECURE_RANDOM = new SecureRandom();
+
+    private final AccountPenaltiesRepository repository;
+
+    @Autowired
+    public AccountPenaltiesServiceImpl(AccountPenaltiesRepository repository) {
+        super();
+        this.repository = repository;
+    }
 
     @Override
     public AccountPenaltiesData getAccountPenalty(String companyCode, String customerCode,
@@ -63,13 +74,6 @@ public class AccountPenaltiesServiceImpl implements AccountPenaltiesService {
         accountPenalties.setPenalties(filterByPenaltyRef(penaltyRef, accountPenalties));
 
         return mapToAccountPenaltiesData(accountPenalties);
-    }
-
-    private static List<AccountPenalty> filterByPenaltyRef(String penaltyRef,
-                                                           AccountPenalties accountPenalties) {
-        return accountPenalties.getPenalties().stream()
-                .filter(p -> p.getTransactionReference().equals(penaltyRef))
-                .collect(Collectors.toList());
     }
 
     @Override
@@ -449,7 +453,7 @@ public class AccountPenaltiesServiceImpl implements AccountPenaltiesService {
 
         List<PenaltyData> penalties = accountPenalties.getPenalties().stream()
                 .map(this::mapToAccountPenaltyData)
-                .collect(Collectors.toList());
+                .toList();
 
         accountPenaltiesData.setPenalties(penalties);
 
